[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = "0.10.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
k256 = "0.13.4"
rand_core = { version = "0.6.4", features = ["getrandom"] }  # can only use this version
argon2 = "0.5.3"
aes-gcm = { version = "0.10.3", features = ["aes"] }
chrono = "0.4.40"